# pyAOBS

./: .buildinfo  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  api.html  authors.html  contributing.html  examples.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  publish.bat  publish.sh  py-modindex.html  pytest.ini  quickstart.html  run_tests.py  search.html  searchindex.js  setup.py  tatus  wave.json  zzplt.json
.doctrees/: api.doctree  authors.doctree  contributing.doctree  environment.pickle  examples.doctree  history.doctree  index.doctree  installation.doctree  modules.doctree  quickstart.doctree
.github/workflows/: python-package.yml
_modules/: index.html
_sources/: api.rst.txt  authors.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt
_static/: documentation_options.js
docs/source/: api.rst  conf.py  examples.rst  history.rst  index.rst  installation.rst  modules.rst  quickstart.rst
pyAOBS/: README.md  Untitled.ipynb  __init__.py  out.csv
pyAOBS/field/: recovery_strategy.py  recovery_strategy_gui.bat  recovery_strategy_gui.py  recovery_strategy_gui.sh  station_path_optimizer_gui.py  station_path_optimizer_gui01.py
pyAOBS/model_building/: models.py  smesh.cc  suform.py  test_suform.py  test_tomoform.py  tomoform.py  zeltform.py
pyAOBS/modeling/: __init__.py  r.in
pyAOBS/modeling/tomo2d/src - 副本 (2)/: CMakeLists.txt  Makefile  README_OMP_BUILD.md  graph.cc  heap_deque.h  inverse.cc  inverse.h  jgrav.cc  lsqr.cc  tt_inverse.cc
pyAOBS/modeling/tomo2d/src - 副本 (2)/build-tomo2d/: cmake_install.cmake  edit_smesh_HHB  gen_vcorr  tt_forward  tt_inverse
pyAOBS/petrology/: README.md  __init__.py  active_upwelling.py  cipw.py  config.py  constants.py  fig2_elastic.py  fractionation.py  invert.py  melting_laws.py  minerals.py  mixing.py  norm_velocity.py  sb1994.py  thread_env.py  vendored.py  vp_regression.py
pyAOBS/processors/: __init__.py
pyAOBS/tests/: fort.35  r.in.bak  r1.out  temp_v.in  temp_v.in.edit  test_imodel_bridge_crust.py  test_imodel_gui_smoke.py  test_imodel_priors_and_rerank.py  test_imodel_qt_load.py  test_lip_gui_fig12a.py  test_model.py  test_modern_hvp_fig12_style.py  test_rayinvr.py  test_tomo2d.py  test_tt_inverse_bundle.py  test_tx2tomo2d.py  test_workbench_gui_plugins.py  test_workbench_project_manager.py  test_workbench_run_manager.py  test_workbench_run_manager_audit_unittest.py  test_workbench_run_manager_cancel_unittest.py  test_workbench_run_manager_failure.py  tx.out  (+8 more)
rock_classification_demo/: demo_database.xlsx
utils/: isrock.py
(+1151 files in other folders)
